# WealthWise

./: .replit  main.py  pyproject.toml  server.py
.streamlit/: config.toml
attached_assets/: Pasted-Status-Code-400-Reason-Bad-Request-HTTP-response-headers-HTTPHeaderDict-Server-nginx-Date-1740946674466.txt  Pasted-Status-Code-400-Reason-Bad-Request-HTTP-response-headers-HTTPHeaderDict-Server-nginx-Date-1740947293931.txt  Pasted-if-page-Bank-Accounts-st-title-Connected-Bank-Accounts-Link-new-account-section--1740951716816.txt  Pasted-import-streamlit-as-st-import-pandas-as-pd-from-utils-data-manager-import-DataManager-from-utils-cha-1740951383554.txt  Pasted-plaid-exceptions-ApiTypeError-Invalid-type-for-variable-0-Required-value-type-is-Products-and-pa-1740946525463.txt  Pasted-sqlalchemy-exc-InternalError-psycopg2-errors-InFailedSqlTransaction-current-transaction-is-aborte-1740952146196.txt  Pasted-sqlalchemy-exc-InvalidRequestError-This-session-is-provisioning-a-new-connection-concurrent-operat-1740953261516.txt  Pasted-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-been-closed-unexpect-1740949720472.txt
styles/: custom.css
utils/: charts.py  data_manager.py  models.py  plaid_client.py
utils/templates/: plaid_link.htm
